broke it into classes
broke it up into classes and added functionality for repeated tries for the user to add the file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-#ignore friends related content
-Friends-Season-04/
-friends-episode-guide.txt
-friends-season-4-episodes.txt
-
+#ignore local test files
+./localTests
